ConstantOopReadValue::print_on should print 'null' instead of 'nullptr'

XMLWordPrintable

    • b07
    • 21
    • b24

        When debugging, I noticed that ConstantOopReadValue::print_on prints 'nullptr' instead of 'NULL' for a field value:

        ScopeDesc(pc=0x00002e13849f2a10 offset=970):
           Test::racyStringConstructionCodepointsSurrogates@110 (line 60) reexecute=true
           Locals
            - l0: empty
            - l1: empty
            - l2: empty
            - l3: stack[24],oop
            - l4: empty
            - l5: merge_obj[708]
            - l6: empty
           Expression stack
            - @0: reg rbp [10],int
            - @1: 1000000
           Objects
            - 0: R merge_obj[708], selector="stack[8]", candidate_objs=[709, 710]
            - 1: obj[709], java.lang.String
                Fields: 0, 0, 0, stack[40],oop
            - 2: obj[710], java.lang.String
                Fields: 0, 0, 0, nullptr

        This is a regression from JDK-8300242. We should also check related code.

              Assignee:
              Theo Weidmann (Inactive)
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: