8323803: ConstantOopReadValue::print_on should print 'null' instead of 'nullptr'

Backport-of: 7620b129888d57514d9ef588e0681f1d43377236